Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "sn22.89:7.9": "Wovon sprichst du, wenn du „ich bin“ sagst?‘“ ",
   "sn22.89:8.1": "„Ja, werte Freunde“, antwortete Dāsaka. Er überbrachte dem Ehrwürdigen Khemaka ihre Botschaft, und dieser antwortete: ",
   "sn22.89:8.10": "„Genug, werter Dāsaka! Wozu dieses Hin- und Herrennen? ",
-  "sn22.89:8.11": "Bring mir meinen Stock, "
+  "sn22.89:8.11": "Bring mir meinen Stock, ",
+  "sn22.89:8.12": "ich werde selbst zu den altehrwürdigen Mönchen und Nonnen gehen.“ "
 }
