--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.89:8.1": "„Ja, werte Freunde“, antwortete Dāsaka. Er überbrachte dem Ehrwürdigen Khemaka ihre Botschaft, und dieser antwortete: ",
   "sn22.89:8.10": "„Genug, werter Dāsaka! Wozu dieses Hin- und Herrennen? ",
   "sn22.89:8.11": "Bring mir meinen Stock, ",
-  "sn22.89:8.12": "ich werde selbst zu den altehrwürdigen Mönchen und Nonnen gehen.“ "
+  "sn22.89:8.12": "ich werde selbst zu den altehrwürdigen Mönchen und Nonnen gehen.“ ",
+  "sn22.89:9.1": "Und der Ehrwürdige Khemaka ging, auf einen Stock gestützt, zu den altehrwürdigen Mönchen und Nonnen und tauschte Willkommensgrüße mit ihnen aus. "
 }
