--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.89:8.12": "ich werde selbst zu den altehrwürdigen Mönchen und Nonnen gehen.“ ",
   "sn22.89:9.1": "Und der Ehrwürdige Khemaka ging, auf einen Stock gestützt, zu den altehrwürdigen Mönchen und Nonnen und tauschte Willkommensgrüße mit ihnen aus. ",
   "sn22.89:9.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin. Die Altehrwürdigen sagten zu ihm: ",
-  "sn22.89:9.3": "„Werter Khemaka, wovon sprichst du, wenn du ‚ich bin‘ sagst? "
+  "sn22.89:9.3": "„Werter Khemaka, wovon sprichst du, wenn du ‚ich bin‘ sagst? ",
+  "sn22.89:9.4": "Ist es Form, oder ist es außerhalb von Form? "
 }
