--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -52,5 +52,6 @@
   "sn22.89:9.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin. Die Altehrwürdigen sagten zu ihm: ",
   "sn22.89:9.3": "„Werter Khemaka, wovon sprichst du, wenn du ‚ich bin‘ sagst? ",
   "sn22.89:9.4": "Ist es Form, oder ist es außerhalb von Form? ",
-  "sn22.89:9.5": "Ist es Gefühl … "
+  "sn22.89:9.5": "Ist es Gefühl … ",
+  "sn22.89:9.6": "Wahrnehmung … "
 }
