Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -54,5 +54,5 @@
   "sn22.89:9.4": "Ist es Form, oder ist es außerhalb von Form? ",
   "sn22.89:9.5": "Ist es Gefühl … ",
   "sn22.89:9.6": "Ist es Wahrnehmung … ",
-  "sn22.89:9.7": "Entscheidungen … "
+  "sn22.89:9.7": "Sind es Entscheidungen … "
 }
