--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -42,7 +42,7 @@
   "sn22.89:7.5": "Ist es Gefühl … ",
   "sn22.89:7.6": "Ist es Wahrnehmung … ",
   "sn22.89:7.7": "Sind es Entscheidungen … ",
-  "sn22.89:7.8": "Bewusstsein, oder ist es außerhalb von Bewusstsein? ",
+  "sn22.89:7.8": "Ist es Bewusstsein, oder ist es außerhalb von Bewusstsein? ",
   "sn22.89:7.9": "Wovon sprichst du, wenn du „ich bin“ sagst?‘“ ",
   "sn22.89:8.1": "„Ja, werte Freunde“, antwortete Dāsaka. Er überbrachte dem Ehrwürdigen Khemaka ihre Botschaft, und dieser antwortete: ",
   "sn22.89:8.10": "„Genug, werter Dāsaka! Wozu dieses Hin- und Herrennen? ",
