--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "sn22.89:9.5": "Ist es Gefühl … ",
   "sn22.89:9.6": "Ist es Wahrnehmung … ",
   "sn22.89:9.7": "Sind es Entscheidungen … ",
-  "sn22.89:9.8": "Ist es Bewusstsein, oder ist es außerhalb von Bewusstsein? "
+  "sn22.89:9.8": "Ist es Bewusstsein, oder ist es außerhalb von Bewusstsein? ",
+  "sn22.89:9.9": "Wovon sprichst du, wenn du „ich bin“ sagst?“ "
 }
