--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "sn22.89:9.8": "Ist es Bewusstsein, oder ist es außerhalb von Bewusstsein? ",
   "sn22.89:9.9": "Wovon sprichst du, wenn du „ich bin“ sagst?“ ",
   "sn22.89:9.10": "„Werte Freunde, ich sage nicht ‚ich bin‘ in Bezug auf Form, noch etwas außerhalb von Form. ",
-  "sn22.89:9.11": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … "
+  "sn22.89:9.11": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … ",
+  "sn22.89:9.12": "in Bezug auf Wahrnehmung … "
 }
