Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "sn22.89:9.10": "„Werte Freunde, ich sage nicht ‚ich bin‘ in Bezug auf Form, noch etwas außerhalb von Form. ",
   "sn22.89:9.11": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … ",
   "sn22.89:9.12": "in Bezug auf Wahrnehmung … ",
-  "sn22.89:9.13": "in Bezug auf Entscheidungen … "
+  "sn22.89:9.13": "in Bezug auf Entscheidungen … ",
+  "sn22.89:9.14": "in Bezug auf Bewusstsein, noch etwas außerhalb von Bewusstsein. "
 }
