Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "sn22.89:9.11": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … ",
   "sn22.89:9.12": "in Bezug auf Wahrnehmung … ",
   "sn22.89:9.13": "in Bezug auf Entscheidungen … ",
-  "sn22.89:9.14": "in Bezug auf Bewusstsein, noch etwas außerhalb von Bewusstsein. "
+  "sn22.89:9.14": "in Bezug auf Bewusstsein, noch etwas außerhalb von Bewusstsein. ",
+  "sn22.89:9.15": "Denn in Bezug auf die fünf mit Ergreifen verbundenen Aggregate bin ich von der Einbildung ‚ich bin‘ nicht frei. Aber ich betrachte nichts als ‚ich bin das‘. "
 }
