Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "sn22.89:9.15": "Denn in Bezug auf die fünf mit Ergreifen verbundenen Aggregate bin ich von der Einbildung ‚ich bin‘ nicht frei. Aber ich betrachte nichts als ‚ich bin das‘. ",
   "sn22.89:10.1": "Wie der Duft einer blauen Seerose oder einer rosa oder weißen Lotusblume: ",
   "sn22.89:10.2": "Wäre es richtig, zu sagen, der Duft gehört zu den Blütenblättern oder zum Stängel oder zum Stempel?“ ",
-  "sn22.89:10.3": "„Nein, werter Freund.“ "
+  "sn22.89:10.3": "„Nein, werter Freund.“ ",
+  "sn22.89:10.4": "„Wie soll man dann sagen, werte Freunde?“ "
 }
