--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.89:10.1": "Wie der Duft einer blauen Seerose oder einer rosa oder weißen Lotusblume: ",
   "sn22.89:10.2": "Wäre es richtig, zu sagen, der Duft gehört zu den Blütenblättern oder zum Stängel oder zum Stempel?“ ",
   "sn22.89:10.3": "„Nein, werter Freund.“ ",
-  "sn22.89:10.4": "„Wie soll man dann sagen, werte Freunde?“ "
+  "sn22.89:10.4": "„Wie soll man dann sagen, werte Freunde?“ ",
+  "sn22.89:10.5": "„Es wäre richtig, zu sagen, der Duft gehört zu der Blume.“ "
 }
