--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -69,5 +69,6 @@
   "sn22.89:10.4": "„Wie soll man dann sagen, werte Freunde?“ ",
   "sn22.89:10.5": "„Es wäre richtig, zu sagen, der Duft gehört zu der Blume.“ ",
   "sn22.89:10.6": "„ebenso, werte Freunde, sage ich nicht ‚ich bin‘ in Bezug auf Form, noch etwas außerhalb von Form. ",
-  "sn22.89:10.7": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … "
+  "sn22.89:10.7": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … ",
+  "sn22.89:10.8": "in Bezug auf Wahrnehmung … "
 }
