--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "sn22.89:10.6": "„ebenso, werte Freunde, sage ich nicht ‚ich bin‘ in Bezug auf Form, noch etwas außerhalb von Form. ",
   "sn22.89:10.7": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … ",
   "sn22.89:10.8": "in Bezug auf Wahrnehmung … ",
-  "sn22.89:10.9": "in Bezug auf Entscheidungen … "
+  "sn22.89:10.9": "in Bezug auf Entscheidungen … ",
+  "sn22.89:10.10": "in Bezug auf Bewusstsein, noch etwas außerhalb von Bewusstsein. "
 }
