--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -72,5 +72,6 @@
   "sn22.89:10.7": "Ich sage nicht ‚ich bin‘ in Bezug auf Gefühl … ",
   "sn22.89:10.8": "in Bezug auf Wahrnehmung … ",
   "sn22.89:10.9": "in Bezug auf Entscheidungen … ",
-  "sn22.89:10.10": "in Bezug auf Bewusstsein, noch etwas außerhalb von Bewusstsein. "
+  "sn22.89:10.10": "in Bezug auf Bewusstsein, noch etwas außerhalb von Bewusstsein. ",
+  "sn22.89:10.11": "Denn in Bezug auf die fünf mit Ergreifen verbundenen Aggregate bin ich von der Einbildung ‚ich bin‘ nicht frei. Aber ich betrachte nichts als ‚ich bin das‘. "
 }
