--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -75,5 +75,6 @@
   "sn22.89:10.10": "in Bezug auf Bewusstsein, noch etwas außerhalb von Bewusstsein. ",
   "sn22.89:10.11": "Denn in Bezug auf die fünf mit Ergreifen verbundenen Aggregate bin ich von der Einbildung ‚ich bin‘ nicht frei. Aber ich betrachte nichts als ‚ich bin das‘. ",
   "sn22.89:11.1": "Obwohl ein edler Schüler die fünf niederen Fesseln aufgegeben hat, hat er noch einen anhaltenden Rest der Einbildung ‚ich bin‘, des Verlangens ‚ich bin‘ und der zugrunde liegenden Neigung ‚ich bin‘, der noch nicht ausgemerzt ist. ",
-  "sn22.89:11.2": "Einige Zeit später meditiert er, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet. "
+  "sn22.89:11.2": "Einige Zeit später meditiert er, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet. ",
+  "sn22.89:11.3": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. "
 }
