--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -78,5 +78,6 @@
   "sn22.89:11.2": "Einige Zeit später meditiert er, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet. ",
   "sn22.89:11.3": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
   "sn22.89:11.4": "So ist Gefühl … ",
-  "sn22.89:11.5": "So ist Wahrnehmung … "
+  "sn22.89:11.5": "So ist Wahrnehmung … ",
+  "sn22.89:11.6": "So sind Entscheidungen … "
 }
