--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -80,5 +80,6 @@
   "sn22.89:11.4": "So ist Gefühl … ",
   "sn22.89:11.5": "So ist Wahrnehmung … ",
   "sn22.89:11.6": "So sind Entscheidungen … ",
-  "sn22.89:11.7": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ "
+  "sn22.89:11.7": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
+  "sn22.89:11.8": "Während er das tut, wird dieser anhaltende Rest ausgemerzt. "
 }
