--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "sn22.89:11.6": "So sind Entscheidungen … ",
   "sn22.89:11.7": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
   "sn22.89:11.8": "Während er das tut, wird dieser anhaltende Rest ausgemerzt. ",
-  "sn22.89:12.1": "Wie ein Tuch, das schmutzig und fleckig ist, und die Besitzer geben es zu einem Wäscher: "
+  "sn22.89:12.1": "Wie ein Tuch, das schmutzig und fleckig ist, und die Besitzer geben es zu einem Wäscher: ",
+  "sn22.89:12.2": "Der Wäscher knetet es gründlich mit Salz, Lauge und Kuhmist und spült es in klarem Wasser aus. "
 }
