--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -84,5 +84,6 @@
   "sn22.89:11.8": "Während er das tut, wird dieser anhaltende Rest ausgemerzt. ",
   "sn22.89:12.1": "Wie ein Tuch, das schmutzig und fleckig ist, und die Besitzer geben es zu einem Wäscher: ",
   "sn22.89:12.2": "Der Wäscher knetet es gründlich mit Salz, Lauge und Kuhmist und spült es in klarem Wasser aus. ",
-  "sn22.89:12.3": "Obwohl das Tuch rein und hell ist, hat es noch einen anhaltenden Geruch nach Salz, Lauge oder Kuhmist, der noch nicht ausgemerzt ist. "
+  "sn22.89:12.3": "Obwohl das Tuch rein und hell ist, hat es noch einen anhaltenden Geruch nach Salz, Lauge oder Kuhmist, der noch nicht ausgemerzt ist. ",
+  "sn22.89:12.4": "Der Wäscher bringt es den Besitzern zurück, und diese verwahren es in einer Duftschatulle. "
 }
