--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -87,5 +87,6 @@
   "sn22.89:12.3": "Obwohl das Tuch rein und hell ist, hat es noch einen anhaltenden Geruch nach Salz, Lauge oder Kuhmist, der noch nicht ausgemerzt ist. ",
   "sn22.89:12.4": "Der Wäscher bringt es den Besitzern zurück, und diese verwahren es in einer Duftschatulle. ",
   "sn22.89:12.5": "Und dabei wird der anhaltende Geruch ausgemerzt. ",
-  "sn22.89:12.6": "Ebenso hat ein edler Schüler, obwohl er die fünf niederen Fesseln aufgegeben hat, noch einen anhaltenden Rest der Einbildung ‚ich bin‘, des Verlangens ‚ich bin‘ und der zugrunde liegenden Neigung ‚ich bin‘, der noch nicht ausgemerzt ist. "
+  "sn22.89:12.6": "Ebenso hat ein edler Schüler, obwohl er die fünf niederen Fesseln aufgegeben hat, noch einen anhaltenden Rest der Einbildung ‚ich bin‘, des Verlangens ‚ich bin‘ und der zugrunde liegenden Neigung ‚ich bin‘, der noch nicht ausgemerzt ist. ",
+  "sn22.89:12.7": "Einige Zeit später meditiert er, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet. "
 }
