Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -91,5 +91,6 @@
   "sn22.89:12.7": "Einige Zeit später meditiert er, indem er das Entstehen und Vergehen bei den fünf mit Ergreifen verbundenen Aggregaten beobachtet. ",
   "sn22.89:12.8": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
   "sn22.89:12.9": "So ist Gefühl … ",
-  "sn22.89:12.10": "So ist Wahrnehmung … "
+  "sn22.89:12.10": "So ist Wahrnehmung … ",
+  "sn22.89:12.11": "So sind Entscheidungen … "
 }
