Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -92,5 +92,6 @@
   "sn22.89:12.8": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
   "sn22.89:12.9": "So ist Gefühl … ",
   "sn22.89:12.10": "So ist Wahrnehmung … ",
-  "sn22.89:12.11": "So sind Entscheidungen … "
+  "sn22.89:12.11": "So sind Entscheidungen … ",
+  "sn22.89:12.12": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ "
 }
