--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -93,5 +93,6 @@
   "sn22.89:12.9": "So ist Gefühl … ",
   "sn22.89:12.10": "So ist Wahrnehmung … ",
   "sn22.89:12.11": "So sind Entscheidungen … ",
-  "sn22.89:12.12": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ "
+  "sn22.89:12.12": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
+  "sn22.89:12.13": "Während er das tut, wird dieser anhaltende Rest ausgemerzt.“ "
 }
