--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -94,5 +94,6 @@
   "sn22.89:12.10": "So ist Wahrnehmung … ",
   "sn22.89:12.11": "So sind Entscheidungen … ",
   "sn22.89:12.12": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
-  "sn22.89:12.13": "Während er das tut, wird dieser anhaltende Rest ausgemerzt.“ "
+  "sn22.89:12.13": "Während er das tut, wird dieser anhaltende Rest ausgemerzt.“ ",
+  "sn22.89:13.1": "Darauf sagten die altehrwürdigen Mönche und Nonnen zu dem Ehrwürdigen Khemaka: "
 }
