--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -97,5 +97,6 @@
   "sn22.89:12.13": "Während er das tut, wird dieser anhaltende Rest ausgemerzt.“ ",
   "sn22.89:13.1": "Darauf sagten die altehrwürdigen Mönche und Nonnen zu dem Ehrwürdigen Khemaka: ",
   "sn22.89:13.2": "„Wir wollten den Ehrwürdigen Khemaka mit unseren Fragen nicht plagen. Aber du bist in der Lage, die Anleitung des Buddha ausführlich zu erklären, zu lehren, festzustellen, zu etablieren, klarzustellen, aufzugliedern und zu enthüllen. ",
-  "sn22.89:13.3": "Und das hast du gerade getan.“ "
+  "sn22.89:13.3": "Und das hast du gerade getan.“ ",
+  "sn22.89:14.1": "Das sagte der Ehrwürdige Khemaka. "
 }
