--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.91_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.91_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.91:0.1": "Verbundene Lehrreden 22.91 ",
-  "sn22.91:0.2": "9. Das Kapitel mit Ordensältesten "
+  "sn22.91:0.2": "9. Das Kapitel mit Ordensältesten ",
+  "sn22.91:0.3": "Mit Rāhula "
 }
