--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -702,6 +702,7 @@
   "sn-name:701.sn22.89": "Mit Khemaka ",
   "sn-name:702.sn22.90": "Mit Channa ",
   "sn-name:703.sn22.91": "Mit Rāhula ",
+  "sn-name:704.sn22.92": "Mit Rāhula (2) ",
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
   "sn-name:707.sn22.94": "Blumen ",
   "sn-name:716.sn22-uparipannasaka": "Die letzten Fünfzig ",
