--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.91_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.91_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.91:0.2": "9. Das Kapitel mit Ordensältesten ",
   "sn22.91:0.3": "Mit Rāhula ",
   "sn22.91:1.1": "In Sāvatthī. ",
-  "sn22.91:1.2": "Da ging der Ehrwürdige Rāhula zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: "
+  "sn22.91:1.2": "Da ging der Ehrwürdige Rāhula zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
+  "sn22.91:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize?“ "
 }
