--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.91_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.91_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.91:2.1": "„Rāhula, man sieht jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "sn22.91:2.2": "Man sieht jegliche Art von Gefühl … ",
   "sn22.91:2.3": "jegliche Art von Wahrnehmung … ",
-  "sn22.91:2.4": "jegliche Art von Entscheidungen … "
+  "sn22.91:2.4": "jegliche Art von Entscheidungen … ",
+  "sn22.91:2.5": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ "
 }
