Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.92:0.1": "Verbundene Lehrreden 22.92 ",
-  "sn22.92:0.2": "9. Das Kapitel mit Ordensältesten "
+  "sn22.92:0.2": "9. Das Kapitel mit Ordensältesten ",
+  "sn22.92:0.3": "Mit Rāhula (2) "
 }
