--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.92:0.1": "Verbundene Lehrreden 22.92 ",
   "sn22.92:0.2": "9. Das Kapitel mit Ordensältesten ",
-  "sn22.92:0.3": "Mit Rāhula (2) "
+  "sn22.92:0.3": "Mit Rāhula (2) ",
+  "sn22.92:1.1": "In Sāvatthī. "
 }
