--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.92:0.2": "9. Das Kapitel mit Ordensältesten ",
   "sn22.92:0.3": "Mit Rāhula (2) ",
   "sn22.92:1.1": "In Sāvatthī. ",
-  "sn22.92:1.2": "Als er sich zur Seite hingesetzt hatte, sagte der Ehrwürdige Rāhula zum Buddha: "
+  "sn22.92:1.2": "Als er sich zur Seite hingesetzt hatte, sagte der Ehrwürdige Rāhula zum Buddha: ",
+  "sn22.92:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass der Geist sich von Ich-Machen, Mein-Machen und Einbildung für diesen beseelten Körper und für alle äußeren Reize losmacht; und dass er über Unterscheidung hinausgeht und friedvoll und gut befreit ist?“ "
 }
