--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.92_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.92:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass der Geist sich von Ich-Machen, Mein-Machen und Einbildung für diesen beseelten Körper und für alle äußeren Reize losmacht; und dass er über Unterscheidung hinausgeht und friedvoll und gut befreit ist?“ ",
   "sn22.92:2.1": "„Rāhula, wenn man jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sieht: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst‘, dann ist man durch Nicht-Ergreifen befreit. ",
   "sn22.92:2.2": "Wenn man jegliche Art von Gefühl … ",
-  "sn22.92:2.3": "jegliche Art von Wahrnehmung … "
+  "sn22.92:2.3": "jegliche Art von Wahrnehmung … ",
+  "sn22.92:2.4": "jegliche Art von Entscheidungen … "
 }
