--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.72_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.72_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "sn22.72:1.1": "In Sāvatthī. ",
   "sn22.72:1.2": "Da sagte der Ehrwürdige Surādha zum Buddha: ",
   "sn22.72:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass der Geist sich von Ich-Machen, Mein-Machen und Einbildung für diesen beseelten Körper und für alle äußeren Reize losmacht; und dass er über Unterscheidung hinausgeht und friedvoll und gut befreit ist?“ ",
-  "sn22.72:1.4": "„Surādha, wenn man jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wenn man sie wahrhaftig mit rechter Weisheit sieht: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst‘, dann ist man durch Nicht-Ergreifen befreit. ",
+  "sn22.72:1.4": "„Surādha, wenn man jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit sieht: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst‘, dann ist man durch Nicht-Ergreifen befreit. ",
   "sn22.72:1.5": "Wenn man jegliche Art von Gefühl … ",
   "sn22.72:1.6": "jegliche Art von Wahrnehmung … ",
   "sn22.72:1.7": "jegliche Art von Entscheidungen … ",
