--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.93:0.1": "Verbundene Lehrreden 22.93 "
+  "sn22.93:0.1": "Verbundene Lehrreden 22.93 ",
+  "sn22.93:0.2": "10. Das Kapitel über Blumen "
 }
