Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.93:0.1": "Verbundene Lehrreden 22.93 ",
   "sn22.93:0.2": "10. Das Kapitel über Blumen ",
   "sn22.93:0.3": "Ein Fluss ",
-  "sn22.93:1.1": "In Sāvatthī. "
+  "sn22.93:1.1": "In Sāvatthī. ",
+  "sn22.93:1.2": "„Wie ein Gebirgsfluss, Mönche und Nonnen, der rasch dahinfließt, weit fortströmt und alles mit sich fortreißt: Wenn an einem seiner Ufer wildes Zuckerrohr, Kusagras, Schilf, Vetiver-Gras oder Bäume wachsen würden, würden sie über den Fluss hängen. Und wenn ein Mensch, der von der Strömung mitgerissen worden wäre, nach dem wilden Zuckerrohr, dem Kusagras, dem Schilf, dem Vetiver-Gras oder den Bäumen greifen würde, würden sie abreißen, und er käme elend um. "
 }
