--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn22.93:1.3": "Ebenso hat da ein ungebildeter gewöhnlicher Mensch die Edlen nicht gesehen und ist in der Lehre der Edlen nicht bewandert und geübt. Er hat keine guten Menschen gesehen und ist in der Lehre der Guten nicht bewandert und geübt. ",
   "sn22.93:1.4": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.93:1.5": "Aber diese seine Form reißt ab, ",
-  "sn22.93:1.6": "und er kommt elend um. "
+  "sn22.93:1.6": "und er kommt elend um. ",
+  "sn22.93:1.7": "Er betrachtet Gefühl als das Selbst … "
 }
