Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.93:1.4": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.93:1.5": "Aber diese seine Form reißt ab, ",
   "sn22.93:1.6": "und er kommt elend um. ",
-  "sn22.93:1.7": "Er betrachtet Gefühl als das Selbst … "
+  "sn22.93:1.7": "Er betrachtet Gefühl als das Selbst … ",
+  "sn22.93:1.8": "Er betrachtet Wahrnehmung als das Selbst … "
 }
