--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.93:1.5": "Aber diese seine Form reißt ab, ",
   "sn22.93:1.6": "und er kommt elend um. ",
   "sn22.93:1.7": "Er betrachtet Gefühl als das Selbst … ",
-  "sn22.93:1.8": "Er betrachtet Wahrnehmung als das Selbst … "
+  "sn22.93:1.8": "Er betrachtet Wahrnehmung als das Selbst … ",
+  "sn22.93:1.9": "Er betrachtet Entscheidungen als das Selbst … "
 }
