--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.93:1.8": "Er betrachtet Wahrnehmung als das Selbst … ",
   "sn22.93:1.9": "Er betrachtet Entscheidungen als das Selbst … ",
   "sn22.93:1.10": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
-  "sn22.93:1.11": "Wenn dann dieses sein Bewusstsein reißt ab, "
+  "sn22.93:1.11": "Wenn dann dieses sein Bewusstsein reißt ab, ",
+  "sn22.93:1.12": "und er kommt elend um. "
 }
