--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.93:1.10": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "sn22.93:1.11": "Wenn dann dieses sein Bewusstsein reißt ab, ",
   "sn22.93:1.12": "und er kommt elend um. ",
-  "sn22.93:1.13": "Was denkt ihr, Mönche und Nonnen? "
+  "sn22.93:1.13": "Was denkt ihr, Mönche und Nonnen? ",
+  "sn22.93:1.14": "Ist Form beständig oder unbeständig?“ "
 }
