--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.93:1.11": "Wenn dann dieses sein Bewusstsein reißt ab, ",
   "sn22.93:1.12": "und er kommt elend um. ",
   "sn22.93:1.13": "Was denkt ihr, Mönche und Nonnen? ",
-  "sn22.93:1.14": "Ist Form beständig oder unbeständig?“ "
+  "sn22.93:1.14": "Ist Form beständig oder unbeständig?“ ",
+  "sn22.93:1.15": "„Unbeständig, Herr.“ … "
 }
