Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.93:1.14": "Ist Form beständig oder unbeständig?“ ",
   "sn22.93:1.15": "„Unbeständig, Herr.“ … ",
   "sn22.93:1.17": "„Ist Gefühl … ",
-  "sn22.93:1.18": "Ist Wahrnehmung … "
+  "sn22.93:1.18": "Ist Wahrnehmung … ",
+  "sn22.93:1.19": "Sind Entscheidungen … "
 }
