Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.93:1.17": "„Ist Gefühl … ",
   "sn22.93:1.18": "Ist Wahrnehmung … ",
   "sn22.93:1.19": "Sind Entscheidungen … ",
-  "sn22.93:1.20": "Ist Bewusstsein beständig oder unbeständig?“ "
+  "sn22.93:1.20": "Ist Bewusstsein beständig oder unbeständig?“ ",
+  "sn22.93:1.21": "„Unbeständig, Herr.“ … "
 }
