--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.93:1.18": "Ist Wahrnehmung … ",
   "sn22.93:1.19": "Sind Entscheidungen … ",
   "sn22.93:1.20": "Ist Bewusstsein beständig oder unbeständig?“ ",
-  "sn22.93:1.21": "„Unbeständig, Herr.“ … "
+  "sn22.93:1.21": "„Unbeständig, Herr.“ … ",
+  "sn22.93:1.22": "„Daher solltet ihr jegliche Art … sehen … "
 }
