--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.93_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.93:1.19": "Sind Entscheidungen … ",
   "sn22.93:1.20": "Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.93:1.21": "„Unbeständig, Herr.“ … ",
-  "sn22.93:1.22": "„Daher solltet ihr jegliche Art … sehen … "
+  "sn22.93:1.22": "„Daher solltet ihr jegliche Art … sehen … ",
+  "sn22.93:1.23": "Wenn er das sieht … "
 }
