Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn22.94:0.1": "Verbundene Lehrreden 22.94 ",
-  "sn22.94:0.2": "10. Das Kapitel über Blumen "
+  "sn22.94:0.2": "10. Das Kapitel über Blumen ",
+  "sn22.94:0.3": "Blumen "
 }
