--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.94:0.1": "Verbundene Lehrreden 22.94 ",
   "sn22.94:0.2": "10. Das Kapitel über Blumen ",
   "sn22.94:0.3": "Blumen ",
-  "sn22.94:1.1": "In Sāvatthī. "
+  "sn22.94:1.1": "In Sāvatthī. ",
+  "sn22.94:1.2": "„Mönche und Nonnen, ich streite nicht mit der Welt; die Welt streitet mit mir. "
 }
