Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.94:0.2": "10. Das Kapitel über Blumen ",
   "sn22.94:0.3": "Blumen ",
   "sn22.94:1.1": "In Sāvatthī. ",
-  "sn22.94:1.2": "„Mönche und Nonnen, ich streite nicht mit der Welt; die Welt streitet mit mir. "
+  "sn22.94:1.2": "„Mönche und Nonnen, ich streite nicht mit der Welt; die Welt streitet mit mir. ",
+  "sn22.94:1.3": "Wenn deine Rede im Einklang mit der Lehre ist, streitest du mit niemandem in der Welt. "
 }
