Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.94:0.3": "Blumen ",
   "sn22.94:1.1": "In Sāvatthī. ",
   "sn22.94:1.2": "„Mönche und Nonnen, ich streite nicht mit der Welt; die Welt streitet mit mir. ",
-  "sn22.94:1.3": "Wenn deine Rede im Einklang mit der Lehre ist, streitest du mit niemandem in der Welt. "
+  "sn22.94:1.3": "Wenn deine Rede im Einklang mit der Lehre ist, streitest du mit niemandem in der Welt. ",
+  "sn22.94:1.4": "Worüber die Klugen sich einig sind, dass es es nicht gibt, davon sage auch ich, es gebe es nicht. "
 }
