Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.94:1.5": "Worüber die Klugen sich einig sind, dass es es gibt, davon sage auch ich: Es gibt es. ",
   "sn22.94:2.1": "Und worüber sind die Klugen sich einig, dass es es nicht gibt, und auch ich sage: Es gibt es nicht? ",
   "sn22.94:2.2": "Form ist beständig, immerwährend, ewig und muss nicht vergehen. ",
-  "sn22.94:2.3": "Gefühl … "
+  "sn22.94:2.3": "Gefühl … ",
+  "sn22.94:2.4": "Wahrnehmung … "
 }
