Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.94:2.2": "Form ist beständig, immerwährend, ewig und muss nicht vergehen. ",
   "sn22.94:2.3": "Gefühl … ",
   "sn22.94:2.4": "Wahrnehmung … ",
-  "sn22.94:2.5": "Entscheidungen … "
+  "sn22.94:2.5": "Entscheidungen … ",
+  "sn22.94:2.6": "Bewusstsein ist beständig, immerwährend, ewig und muss nicht vergehen. "
 }
