--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.94:2.3": "Gefühl … ",
   "sn22.94:2.4": "Wahrnehmung … ",
   "sn22.94:2.5": "Entscheidungen … ",
-  "sn22.94:2.6": "Bewusstsein ist beständig, immerwährend, ewig und muss nicht vergehen. "
+  "sn22.94:2.6": "Bewusstsein ist beständig, immerwährend, ewig und muss nicht vergehen. ",
+  "sn22.94:2.7": "Davon sind die Klugen sich einig, dass es es nicht gibt, und auch ich sage: Es gibt es nicht. "
 }
