Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn22.94:2.3": "Gefühl … ",
   "sn22.94:2.4": "Wahrnehmung … ",
   "sn22.94:2.5": "Entscheidungen … ",
-  "sn22.94:2.6": "Bewusstsein ist beständig, immerwährend, ewig und muss nicht vergehen. ",
+  "sn22.94:2.6": "Bewusstsein, das beständig, immerwährend und ewig ist und nicht vergehen muss – ",
   "sn22.94:2.7": "Davon sind die Klugen sich einig, dass es es nicht gibt, und auch ich sage: Es gibt es nicht. ",
   "sn22.94:3.1": "Und wovon sind die Klugen sich einig, dass es es gibt, und auch ich sage: Es gibt es? "
 }
