Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.94:3.2": "Form, die unbeständig und Leiden ist und zugrunde gehen muss – ",
   "sn22.94:3.3": "Gefühl … Wahrnehmung … Entscheidungen … ",
   "sn22.94:3.4": "Bewusstsein, das unbeständig und Leiden ist und zugrunde gehen muss – ",
-  "sn22.94:3.5": "davon sind die Klugen sich einig, dass es es gibt, und auch ich sage: Es gibt es. "
+  "sn22.94:3.5": "davon sind die Klugen sich einig, dass es es gibt, und auch ich sage: Es gibt es. ",
+  "sn22.94:4.1": "Es gibt in der Welt eine weltliche Erscheinung, die der Klargewordene versteht und erfasst. "
 }
