Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.94:3.5": "davon sind die Klugen sich einig, dass es es gibt, und auch ich sage: Es gibt es. ",
   "sn22.94:4.1": "Es gibt eine weltliche Erscheinung in der Welt, die der Klargewordene versteht und erfasst. ",
   "sn22.94:4.2": "Dann erklärt er sie, lehrt sie, stellt sie fest, etabliert sie, stellt sie klar, gliedert sie auf und enthüllt sie. ",
-  "sn22.94:5.1": "Und was ist diese weltliche Erscheinung in der Welt? "
+  "sn22.94:5.1": "Und was ist diese weltliche Erscheinung in der Welt? ",
+  "sn22.94:5.2": "Form ist eine weltliche Erscheinung in der Welt, die der Klargewordene versteht und erfasst. "
 }
