Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.94:6.2": "Gefühl ist eine weltliche Erscheinung in der Welt … ",
   "sn22.94:6.3": "Wahrnehmung ist eine weltliche Erscheinung in der Welt … ",
   "sn22.94:6.4": "Entscheidungen sind weltliche Erscheinungen in der Welt … ",
-  "sn22.94:6.5": "Bewusstsein ist eine weltliche Erscheinung in der Welt, die der Klargewordene versteht und erfasst. "
+  "sn22.94:6.5": "Bewusstsein ist eine weltliche Erscheinung in der Welt, die der Klargewordene versteht und erfasst. ",
+  "sn22.94:6.6": "Dann erklärt er sie, lehrt sie, stellt sie fest, etabliert sie, stellt sie klar, gliedert sie auf und enthüllt sie. "
 }
