Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.94:6.4": "Entscheidungen sind weltliche Erscheinungen in der Welt … ",
   "sn22.94:6.5": "Bewusstsein ist eine weltliche Erscheinung in der Welt, die der Klargewordene versteht und erfasst. ",
   "sn22.94:6.6": "Dann erklärt er sie, lehrt sie, stellt sie fest, etabliert sie, stellt sie klar, gliedert sie auf und enthüllt sie. ",
-  "sn22.94:7.1": "Da das so ist, was kann ich da mit einem törichten gewöhnlichen Menschen machen, der blind und ohne Sehvermögen ist, der das nicht erkennt und sieht? "
+  "sn22.94:7.1": "Da das so ist, was kann ich da mit einem törichten gewöhnlichen Menschen machen, der blind und ohne Sehvermögen ist, der das nicht erkennt und sieht? ",
+  "sn22.94:8.1": "Angenommen, da wäre eine blaue Seerose oder eine rosa oder weiße Lotusblume. Obwohl sie im Wasser gesprossen und gewachsen ist, erhebt sie sich über das Wasser und steht unbenetzt vom Wasser da. "
 }
