Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig16.1_translation-de-sabbamitta.json
@@ -215,7 +215,7 @@
   "thig16.1:53.3": "den Kopf durch die Öffnung stecken ",
   "thig16.1:53.4": "ist ein Bild dafür, als Mensch geboren zu werden. ",
   "thig16.1:54.1": "Denk an die Form dieses unglücklichen Körpers, ",
-  "thig16.1:54.2": "der substanzlos ist wie ein Klümpchen Schaum. ",
+  "thig16.1:54.2": "der substanzlos ist wie ein Schaumklümpchen. ",
   "thig16.1:54.3": "Sieh die Aggregate als unbeständig an, ",
   "thig16.1:54.4": "denk an die Höllen, die so voller Bedrängnis sind. ",
   "thig16.1:55.1": "Denk an die, die wieder und wieder ",
