Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -706,7 +706,7 @@
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
   "sn-name:706.sn22.93": "Ein Fluss ",
   "sn-name:707.sn22.94": "Blumen ",
-  "sn-name:708.sn22.95": "Ein Schaumklümpchen ",
+  "sn-name:708.sn22.95": "Ein Schaumklumpen ",
   "sn-name:716.sn22-uparipannasaka": "Die letzten Fünfzig ",
   "sn-name:717.sn22-antavagga": "Das Kapitel über Seiten ",
   "sn-name:718.sn22.103": "Seiten ",
