Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.95:7.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
   "sn22.95:7.3": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
   "sn22.95:8.1": "Das sagte der Buddha. ",
-  "sn22.95:8.2": "Und der Heilige, der Lehrer, fuhr fort: "
+  "sn22.95:8.2": "Und der Heilige, der Lehrer, fuhr fort: ",
+  "sn22.95:9.1": "„Form ist wie ein Schaumklumpen; "
 }
