Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.95:8.2": "Und der Heilige, der Lehrer, fuhr fort: ",
   "sn22.95:9.1": "„Form ist wie ein Schaumklumpen; ",
   "sn22.95:9.2": "Gefühl ist wie eine Blase; ",
-  "sn22.95:9.3": "Wahrnehmung ist wie eine Fata Morgana; "
+  "sn22.95:9.3": "Wahrnehmung ist wie eine Fata Morgana; ",
+  "sn22.95:9.4": "Entscheidungen sind wie ein Bananenbaum; "
 }
