Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn22.95:10.2": "und sorgfältig untersucht, ",
   "sn22.95:10.3": "sie sind leer und hohl, ",
   "sn22.95:10.4": "wenn man genau hinschaut. ",
-  "sn22.95:11.1": "Was diesen Körper betrifft, "
+  "sn22.95:11.1": "Was diesen Körper betrifft, ",
+  "sn22.95:11.2": "hat er von ausgedehnter Weisheit gelehrt, "
 }
