Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.95:10.4": "wenn man genau hinschaut. ",
   "sn22.95:11.1": "Was diesen Körper betrifft, ",
   "sn22.95:11.2": "hat er von ausgedehnter Weisheit gelehrt, ",
-  "sn22.95:11.3": "dass man sieht, wie diese Form weggeworfen wird, "
+  "sn22.95:11.3": "dass man sieht, wie diese Form weggeworfen wird, ",
+  "sn22.95:11.4": "wenn drei Dinge aufgegeben sind. "
 }
