Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.95:11.2": "hat er von ausgedehnter Weisheit gelehrt, ",
   "sn22.95:11.3": "dass man sieht, wie diese Form weggeworfen wird, ",
   "sn22.95:11.4": "wenn drei Dinge aufgegeben sind. ",
-  "sn22.95:12.1": "Lebensenergie, Wärme und Bewusstsein: "
+  "sn22.95:12.1": "Lebensenergie, Wärme und Bewusstsein: ",
+  "sn22.95:12.2": "Wenn sie den Körper verlassen, "
 }
