Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.95:13.3": "Er gilt als Mörder, ",
   "sn22.95:13.4": "denn man findet in ihm keinen Kern. ",
   "sn22.95:14.1": "Ein energischer Mönch ",
-  "sn22.95:14.2": "soll so die Aggregate untersuchen, "
+  "sn22.95:14.2": "soll so die Aggregate untersuchen, ",
+  "sn22.95:14.3": "bei Tag und Nacht "
 }
