Translations by sujato to translation/en/sujato/name/sutta/an-name_translation-en-sujato.json

--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -72,7 +72,7 @@
   "an-name:71.an2.77-86": "With a Foundation ",
   "an-name:72.an2-dhammavagga": "The Chapter on Two Things ",
   "an-name:73.an2.87-97": "Two Things ",
-  "an-name:74.an2-balavagga2": "Fools ",
+  "an-name:74.an2-balavagga2": "The Chapter on Fools ",
   "an-name:75.an2.98-117": "Fools ",
   "an-name:76.an2-tatiyapannasaka": "The Third Fifty ",
   "an-name:77.an2-asaduppajahavagga": "The Chapter on Hopes That Are Hard to Give Up ",
