Translations by sujato to translation/en/sujato/name/sutta/an-name_translation-en-sujato.json

--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -26,7 +26,7 @@
   "an-name:25.an1.150-169": "Non-offense ",
   "an-name:26.an1-ekapuggalavagga": "The Chapter on One Person ",
   "an-name:27.an1.170-187": "One Person ",
-  "an-name:28.an1-etadaggavagga": "The Chapter on the Foremost Persons ",
+  "an-name:28.an1-etadaggavagga": "Seven Chapters on the Foremost Persons ",
   "an-name:29.an1.188-197": "Chapter One ",
   "an-name:30.an1.198-208": "Chapter Two ",
   "an-name:31.an1.209-218": "Chapter Three ",
