Translations by sujato to translation/en/sujato/name/sutta/an-name_translation-en-sujato.json

--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -34,7 +34,7 @@
   "an-name:33.an1.235-247": "Chapter Five ",
   "an-name:34.an1.248-257": "Chapter Six ",
   "an-name:35.an1.258-267": "Chapter Seven ",
-  "an-name:36.an1-atthana": "The Chapter on the Impossible ",
+  "an-name:36.an1-atthana": "Three Chapters on the Impossible ",
   "an-name:37.an1.268-277": "Chapter One ",
   "an-name:38.an1.278-286": "Chapter Two ",
   "an-name:39.an1.287-295": "Chapter Three ",
