Translations by sujato to translation/en/sujato/name/sutta/an-name_translation-en-sujato.json

--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -38,7 +38,7 @@
   "an-name:37.an1.268-277": "Chapter One ",
   "an-name:38.an1.278-286": "Chapter Two ",
   "an-name:39.an1.287-295": "Chapter Three ",
-  "an-name:40.an1-ekadhamma": "The Chapter on One Thing ",
+  "an-name:40.an1-ekadhamma": "Four Chapters on One Thing ",
   "an-name:41.an1.296-305": "Chapter One ",
   "an-name:42.an1.306-315": "Chapter Two ",
   "an-name:43.an1.316-332": "Chapter Three ",
