Translations by sujato to translation/en/sujato/name/sutta/an-name_translation-en-sujato.json

--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -86,7 +86,7 @@
   "an-name:85.an2-samapattivagga": "The Chapter on Attainment ",
   "an-name:86.an2.163-179": "Attainment ",
   "an-name:87.an2-peyyala": "Abbreviated Texts ",
-  "an-name:88.an2-kodhapeyyalavagga": "The Chapter on Abbreviated Texts Beginning with Anger ",
+  "an-name:88.an2-kodhapeyyalavagga": "The Chapter of Abbreviated Texts on Anger, etc. ",
   "an-name:89.an2.180-229": "Abbreviated Texts Beginning with Anger ",
   "an-name:90.an2-akusalapeyyalavagga": "The Chapter on Abbreviated Texts Beginning with the Unskillful ",
   "an-name:91.an2.230-279": "Abbreviated Texts Beginning with the Unskillful ",
