Translations by sujato to translation/en/sujato/name/sutta/an-name_translation-en-sujato.json

--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -91,7 +91,7 @@
   "an-name:90.an2-akusalapeyyalavagga": "The Chapter of Abbreviated Texts on the Unskillful, etc. ",
   "an-name:91.an2.230-279": "Abbreviated Texts on the Unskillful, etc.",
   "an-name:92.an2-vinayapeyyalavagga": "The Chapter on Abbreviated Texts on Monastic Training ",
-  "an-name:93.an2.280-309": "Abbreviated Texts on Monastic Training ",
+  "an-name:93.an2.280-309": "Abbreviated Texts on Monastic Law ",
   "an-name:94.an2-ragapeyyalavagga": "The Chapter on Abbreviated Texts Beginning with Greed ",
   "an-name:95.an2.310-479": "Abbreviated Texts Beginning with Greed ",
   "an-name:96.an3": "The Book of the Threes ",
