Translations by sujato to translation/en/sujato/name/sutta/an-name_translation-en-sujato.json

--- a/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
+++ b/translation/en/sujato/name/sutta/an-name_translation-en-sujato.json
@@ -88,7 +88,7 @@
   "an-name:87.an2-peyyala": "Abbreviated Texts ",
   "an-name:88.an2-kodhapeyyalavagga": "The Chapter of Abbreviated Texts Beginning With Anger",
   "an-name:89.an2.180-229": "Abbreviated Texts Beginning With Anger",
-  "an-name:90.an2-akusalapeyyalavagga": "The Chapter of Abbreviated Texts on the Unskillful, etc. ",
+  "an-name:90.an2-akusalapeyyalavagga": "The Chapter of Abbreviated Texts Beginning With Unskillful",
   "an-name:91.an2.230-279": "Abbreviated Texts on the Unskillful, etc.",
   "an-name:92.an2-vinayapeyyalavagga": "The Chapter of Abbreviated Texts on Monastic Law ",
   "an-name:93.an2.280-309": "Abbreviated Texts on Monastic Law ",
